--- a/Week 5 Assignment/CSS/index.css
+++ b/Week 5 Assignment/CSS/index.css
@@ -1,18 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&family=Unbounded:wght@200;400;700&display=swap");
 
-/* font-family: 'Open Sans', sans-serif;
-font-family: 'Unbounded', cursive;
-*/
-
-/* Set the box-sizing for all elements to border-box */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: "Open Sans", sans-serif;
 }
 
 .container {
@@ -24,21 +14,35 @@ body {
 .content-wrapper {
   height: 100vh;
   width: 50%;
-  background: linear-gradient(rgb(17, 17, 17),rgb(60, 36, 126), rgb(55, 13, 13)) ;
+  background: linear-gradient(rgb(17, 17, 17),rgb(60, 36, 126), rgb(61, 61, 61)) ;
   padding: 5%;
   color: #ffffff;
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 70px;
   line-height: 1.1;
   margin-bottom: 30px;
-  font-family: "Unbounded", cursive;
+  font-family: 'Chivo Mono', monospace;
+
+  
 }
 
 h2 {
-  margin-bottom: 100px;
+  font-family: 'Chivo Mono', monospace;
+  margin-bottom: 150px;
   font-weight: 200;
+}
+.date {
+  font-family: 'Chivo Mono', monospace;
+  margin-bottom: 10px;
+  font-weight: 200;
+  font-size: 20px;
+}
+.place {
+  font-family: 'Chivo Mono', monospace;
+  margin-bottom: 10px;
+  font-size: 20px;
 }
 
 figure {
@@ -53,9 +57,10 @@ figure {
 }
 
 .button a {
+  font-family: 'Chivo Mono', monospace;
   display: inline-block;
   padding: 10px 50px;
-  background: rgb(218, 79, 64);
+  background: linear-gradient(rgb(56, 49, 49), rgb(173, 49, 49));
  border-radius: 10px;
   text-decoration: none;
   color: rgb(249, 237, 237);
@@ -72,14 +77,32 @@ figure {
 
 
 @media screen and (max-width: 1024px) {
+  .container{
+    width: 100%;
+  }
   .button a {
     font-size: 16px;
+  }
+  .content-wrapper h1 {
+    font-size: 50px;
+  }
+  .content-wrapper h2 {
+    font-size: 20px;
+  }
+  .date {
+    font-size: 20px;
+  }
+  .place {
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .content-wrapper {
     padding-bottom: 50px;
+  }
+  .content-wrapper h2 {
+    margin-bottom: 200px;
   }
 
   .content-wrapper,
@@ -96,6 +119,8 @@ figure {
   .button a {
     text-align: center;
   }
-  .container{width: 100%;}
+  .container{
+    width: 100%;
+  }
 }
-/*  */
+
