--- a/Week 5 Assignment/CSS/Design2.css
+++ b/Week 5 Assignment/CSS/Design2.css
@@ -4,6 +4,7 @@
 }
 
 .a {
+  
     background-image:url(../img/back.jpg);
     background-position: center ;
     background-size: cover;
@@ -33,10 +34,10 @@
   width: 33%;
   
 }
-.Tenzin figure {
+.Tenzin img{
 width: 300px;
 height: 300px;
-  margin: 30px;
+  border-radius: 10px;
 }
 .Tenzin h2{
     padding: 10px;
@@ -46,10 +47,6 @@ height: 300px;
 .Tenzin p{
     font-family: 'Roboto Mono', monospace;
 }
-.Tenzin figure img {
-  width: 100%;
-  border-radius: 10px;
-}
 .Krishan {
     height:70vh;
   display: flex;
@@ -58,10 +55,10 @@ height: 300px;
   width: 33%;
 }
   
-  .Krishan figure {
+  .Krishan img{
     width: 300px;
     height: 300px;
-      margin: 30px;
+      border-radius: 10px;
   }
   .Krishan h2{
     padding: 10px;
@@ -71,10 +68,6 @@ height: 300px;
   .Krishan p{
     font-family: 'Roboto Mono', monospace;
     
-}
-  .Krishan figure img {
-    width: 100%;
-    border-radius: 10px;
   }
 
   .Aditya {
@@ -85,10 +78,10 @@ height: 300px;
     width: 33%;
   }
   
-  .Aditya figure {
+  .Aditya img {
     width: 300px;
     height: 300px;
-      margin: 30px;
+      border-radius: 10px;
   }
   .Aditya h2{
     padding: 10px;
@@ -99,18 +92,40 @@ height: 300px;
   font-family: 'Roboto Mono', monospace;
  
   }
-  .Aditya figure img {
-    width: 100%;
-    border-radius: 10px;
-  }
+  
   @media screen and (max-width: 1024px){
-
-  }
-@media screen and (max-width: 768px) {
 .a{
   width: 100%;
+  height: 100%;
+
+}
+  }
+
+@media screen and (max-width: 768px) {
+.a{
+  width: auto;
+  height: auto;
+  
+}
+.container{
+  flex-direction: column;
+  align-items: center;
 }
 }
 @media screen and (max-width: 420px) {
+  .a{
+
+    width: auto;
+    flex-direction: column;
+  }
+  .container h2 {
+  font-size:medium;
+  }
+  .container p {
+    font-size: 15px;
+    text-align: center;
+
+  }
+
   
 }
